add add7 and multiply functions to function1 file

--- a/functions1.html
+++ b/functions1.html
@@ -8,16 +8,27 @@
   <script>
     // Your JavaScript goes here!
     function add7 (number) {
-      return number + 7;
+      return number + 7
     }
 
     function multiply (num1, num2) {
-      return num1 * num2;
+      return num1 * num2
     }
 
-    function capitalize () {
+    // function capitalize (word) {
+    //   word = word.toLowerCase()
+    //   word[0] = word[0].toUpperCase()
+    //   return word
+    // }
 
-    }
+    // function lastLetter (word) {
+    //   let lastChar = word.slice(-1)
+    //   return lastChar
+    // }
+    console.log(add7(7))  
+    console.log(add7(14)) 
+    console.log(multiply(2,3))
+    console.log(multiply(4,3)) 
 
   </script>
 </body>
