--- a/functions1.html
+++ b/functions1.html
@@ -15,11 +15,10 @@
       return num1 * num2
     }
 
-    // function capitalize (word) {
-    //   word = word.toLowerCase()
-    //   word[0] = word[0].toUpperCase()
-    //   return word
-    // }
+    function capitalize (str) {
+      newStr = str[0].toUpperCase() + str.slice(1)
+      return newStr
+    }
 
     // function lastLetter (word) {
     //   let lastChar = word.slice(-1)
