add lastLetter function to functions1 file

--- a/functions1.html
+++ b/functions1.html
@@ -20,14 +20,18 @@
       return newStr
     }
 
-    // function lastLetter (word) {
-    //   let lastChar = word.slice(-1)
-    //   return lastChar
-    // }
+    function lastLetter (str) {
+      return str.at(-1)
+    }
+
     console.log(add7(7))  
     console.log(add7(14)) 
     console.log(multiply(2,3))
     console.log(multiply(4,3)) 
+    console.log(capitalize("dorian"))  
+    console.log(capitalize("farrah")) 
+    console.log(lastLetter("dorian"))
+    console.log(lastLetter("farrah"))
 
   </script>
 </body>
